[tool.poetry]
name = "trading_bots"
version = "0.1.0"
description = "Scan a DEX's hottest coin based on returns and volume."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "trading_bots" }]

[tool.poetry.dependencies]
bottle = "^0.12.25"
python = "^3.10"
pandas = "^2.0.0"
psycopg2-binary = "^2.9.6"
requests = "^2.28.2"
sentry-sdk = "^1.21.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pandas-stubs = "^2.0.0.230412"
types-requests = "^2.28.11.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
