[tool.poetry]
name = "trading_bots"
version = "0.1.0"
description = "Scan a DEX's hottest coin based on returns and volume."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "trading_bots" }]

[tool.poetry.dependencies]
bottle = "^0.12.25"
pandas = "^2.0.1"
psycopg = "^3.1.9"
psycopg-pool = "^3.1.7"
python = "^3.10"
requests = "^2.31.0"
sentry-sdk = "^1.24.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pandas-stubs = "^2.0.1.230501"
types-requests = "^2.31.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
